
(Mark Diggory)
 - [DS-100] XMLUI OpenURL support contributed by the National Evolutionary Synthesis Center (NESCent) and @mire.
 - [DS-93]  Upgrade XMLUI to Cocoon 2.2

(Mark Wood)
 - [2002866] Return 404, not 200, when page Not Found
 - [2025998] Usage event (statistics) plugin hook
 - [2620307] 'ant init_configs' copies wrong dspace.cfg
 - [DS-41] Small JSP cleanups

(Stuart Lewis)
 - [2057231] Refactor LDAPServlet to use Stackable Authentication
 - Enable ldap.login.specialgroup special group for all LDAP users
 - Fix for SF bug [2164955] DSpace1.5.1(XML) problem with Login to restricted bitstreams
 - Fix for SF bug [2343281] XHTML Head Dissimination Crosswalk exposes provenance info
 - Fix for SF bug [1896225] HTML tags not stripped in statistics display
 - Fix for SF bug [1951859] DSpace Home link style in breadcrumb trail
 - Fix for SF bug [1730606] Restricted Items metadata exposed via OAI
 - Patch for SF feature request [1587270] Implicit group for all registered users
 - Fix for SF bug [2495728] 'My Account' disappears following exports
 - Update XMLUI Google Analytics code to match latest tracking code
 - Fix for SF bug [1606439] Exception handling for deleting a metadata field
 - [2513300] Fix for bug [1774958] Nested folders do not export correctly
 - Fix for SF bug [2086481] xmlui Administrative log in as another eperson
 - Fix for SF bug [2155479] Submission verify page handles dc.identifier.* incorrectly
 - [DS-60] netid.toLowerCase() in different classes and methods - ID: 2458187
 - Fix for Jira [DS-98] Key jsp.mydspace.request.export.community not set in Messages.properties
 - [2696133] New export option (migrate) and fix for Jira [DS-59]
 
(Stuart Lewis / Chris Yates / Flavio Botelho / Alex Barbieri / Reuben Pasquini / Paulo Matos)
 - [2057378] Hierarchical LDAP support

(Paul Needham / Jon Bell / Stuart Lewis)
 - Inclusion of uketd_dc OAI-PMH crosswalk

(Yin Latt)